--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
       - "3100:3100"
     volumes:
       - /data/loki:/etc/loki
-      - /data/config/loki:/etc/loki/config
+      - /data/config/loki/loki-config.yaml:/etc/loki/config/local-config.yaml
       - /data/loki/index:/opt/loki/index
       - /data/loki/chunks:/opt/loki/chunks
     command: -config.file=/etc/loki/local-config.yaml
