--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,9 @@ services:
       - "2379:2379/tcp"
     networks:
       - apisix
+    command:
+      - etcdctl user add root
+      - etcdctl --user='root' --password='iRHb1WozrOKrmfby'
     deploy:
       placement:
         constraints:
